css: Prevent the text from being invisible on row selection
When right clicking on a SongWidget in the the PlaylistsView to
display the context menu, the widget state becomes selected and the
color changes to the same color as the background: it becomes
invisible.

Fix the issue by forcing the foreground color to be identical in
unselected and selected states.

--- a/data/org.gnome.Music.css
+++ b/data/org.gnome.Music.css
@@ -129,6 +129,9 @@ https://gitlab.gnome.org/GNOME/gtk/issues/694 */
     background-color: @theme_base_color;
 }
 
+.songs-list > row:selected label {
+    color: @theme_fg_color;
+}
 
 
 .disc-list-box > row {
